--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -14,7 +14,9 @@ $color_fondo-widget:#6BA4B0;
 $color_fondo-tela:rgba(0,0,0,0.5);
 $color_fondo-tela_dark:rgba(0,0,0,0.7);
 $color_fondo-tela_light:rgba(0,0,0,0.7);
-
+$color_fondo-shadow_dark:rgba(0,0,0,0.4);
+$color_fondo-shadow_darklight:rgba(0,0,0,0.3);
+$color_fondo-shadow_light:rgba(0,0,0,0.14);
 $anchos:(
     media:300px,
     logo-img:150px,
