--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,46 @@ img {
 #filtroProductos .navbar-toggler {
   display: none; }
 
+#CheckoutCarrito .info_checkout {
+  display: flex;
+  flex-direction: column; }
+  #CheckoutCarrito .info_checkout span {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 200px; }
+
+#productosCarrito #productoCarrito {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; }
+  #productosCarrito #productoCarrito span {
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
+    #productosCarrito #productoCarrito span img {
+      width: 200px; }
+    #productosCarrito #productoCarrito span #carritoInfo {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 5px; }
+      #productosCarrito #productoCarrito span #carritoInfo div {
+        width: 100%; }
+      #productosCarrito #productoCarrito span #carritoInfo #carritoInfo-start {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 10px; }
+      #productosCarrito #productoCarrito span #carritoInfo #carritoInfo-del {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-end; }
+  #productosCarrito #productoCarrito #carritoInfoTotal {
+    justify-content: flex-end;
+    font-size: 2rem; }
+
 /* Header */
 header .logo {
   display: flex;
