--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -126,7 +126,66 @@ p {
         display: none;
     }
     
+#CheckoutCarrito .info_checkout {
+    display: flex;
+    flex-direction: column;
+    span {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 200px;
+    }
+}
 
+#productosCarrito {
+    #productoCarrito {
+        
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        span {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            img {
+                width: 200px;
+            }
+
+            #carritoInfo {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 5px;
+                div {
+                    width: 100%;
+                }
+
+                #carritoInfo-start {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    gap: 10px;
+                }
+                #carritoInfo-del{
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: flex-end;
+                }
+                
+            }
+
+            
+        }
+
+        #carritoInfoTotal {
+            justify-content: flex-end;
+            font-size: 2rem;
+        }   
+    }
+    
+}
 /* Header */
     header{
 
