--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,8 @@ img {
 #productosCarrito #productoCarrito {
   display: flex;
   flex-direction: column;
-  gap: 1rem; }
+  gap: 1rem;
+  --bs-gutter-x: 0; }
   #productosCarrito #productoCarrito span {
     display: flex;
     flex-direction: row;
@@ -138,7 +139,8 @@ img {
         justify-content: flex-end; }
   #productosCarrito #productoCarrito #carritoInfoTotal {
     justify-content: flex-end;
-    font-size: 2rem; }
+    font-size: 2rem;
+    padding: 0 1rem; }
 
 /* Header */
 header .logo {
