--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -169,6 +169,7 @@ p {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        --bs-gutter-x: 0;
         span {
             display: flex;
             flex-direction: row;
@@ -208,6 +209,7 @@ p {
         #carritoInfoTotal {
             justify-content: flex-end;
             font-size: 2rem;
+            padding: 0 1rem;
         }   
     }
     
