--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $color_texto-hover_active:#6BA4B0;
 $color_texto-cards:#fff;
 $color_texto-a:#fff;
 $color_texto-a_visited:rgb(235, 235, 235);
+$color_text_gold: goldenrod; 
 
 $color_fondo:#fff;
 $color_fondo-hover:#5A7E70;
