--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,10 +144,20 @@ img {
 
 #submitted_text {
   width: 100%;
-  display: block;
   padding: 1rem;
   background: goldenrod;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  display: none; }
+
+#enviando {
+  display: none; }
+  #enviando.prender {
+    background: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem; }
 
 /* Header */
 header .logo {
